# aaajiao_scraper

./: .env.example  .gitignore  .ruff.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_OLD.md  aaajiao_portfolio.md  aaajiao_scraper.py  aaajiao_scraper_old.py  aaajiao_works.json  aaajiao_works_backup_20260123_105850.json  app.py  debug_extract.py  debug_scroll.py  firecrawl_test.py  gui_app.py  output.txt  output_poll.txt  output_v2.txt  output_v3.txt  pyproject.toml  skills-lock.json  start_gui.command  update_scraper.py  verify_portfolio.py
agent_discovery_output/: data_20251221_123702.json  data_20251221_162930.json  data_20251221_174032.json  report_20251221_123702.md  report_20251221_162930.md  report_20251221_174032.md
agent_output/: agent_data.json  artwork_report.md
examples/: README.md  batch_extraction.py  incremental_scrape.py  quick_start.py
macos/: .gitignore  README.md  jiaozip.icns
macos/App/: HelperClient.swift  ImporterViews.swift  Info.plist  Keychain.swift  OpenAIModelSettings.swift  main.swift
macos/Helper/: aaajiao_importer.py
macos/HelperBridge/: AaajiaoHelper.swift
macos/Seed/: seed_manifest.json
macos/Shared/: ImporterDTOs.swift
output/: README.md
portfolio_scraper/: README.md  app.py
portfolio_scraper/examples/: README.md  batch_extraction.py  incremental_scrape.py  quick_start.py
portfolio_scraper/reports/: README.md
portfolio_scraper/scraper/: __init__.py  basic.py  cache.py  constants.py  firecrawl.py  paths.py  py.typed  report.py
portfolio_scraper/scripts/: batch_update_works.py  clean_materials_credits.py  clean_size_materials.py  firecrawl_test.py  fix_problematic_works.py  generate_web_report.py  update_scraper.py  verify_layer2.py  verify_portfolio.py
portfolio_scraper/tests/: conftest.py  test_cache.py  test_core.py  test_report.py  verify_constants.py  verify_fixes.py
reports/: web_report_20260123_142444.md
scraper/: __init__.py  basic.py  cache.py  constants.py  core.py  firecrawl.py  report.py
scripts/: batch_update_works.py  clean_materials_credits.py  clean_size_materials.py  debug_extract.py  debug_scroll.py  debug_site.py  firecrawl_test.py  fix_problematic_works.py  generate_web_report.py  prototype_bs4.py  scrape_single.py  update_scraper.py  verify_layer2.py  verify_local.py  verify_portfolio.py
tests/: conftest.py  reproduce_issue.py  test_basic.py  test_core.py  test_firecrawl.py  test_macos_helper.py  test_report.py  verify_constants.py  verify_fixes.py
xxx/: 2025-12-16T18-17_export.csv
